[gd_scene load_steps=6 format=3 uid="uid://lslfgec3o2x3"]

[ext_resource type="Theme" uid="uid://sfy8iivbp4g" path="res://assets/theme.tres" id="1_eo8ri"]
[ext_resource type="Script" uid="uid://csytsh0pmbsjw" path="res://scenes/Settings/setting_button.gd" id="1_u7v05"]
[ext_resource type="Texture2D" uid="uid://bmiablt0begj3" path="res://export/export/index.icon.png" id="3_0852y"]
[ext_resource type="PackedScene" uid="uid://4h61n1tdwejm" path="res://scenes/Settings/settings.tscn" id="4_u7v05"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0852y"]
bg_color = Color(0.93333334, 0.93333334, 0.93333334, 1)
border_width_left = 24
border_width_top = 24
border_width_right = 24
border_width_bottom = 24
border_color = Color(0.07058824, 0.07058824, 0.07058824, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_eo8ri")
script = ExtResource("1_u7v05")

[node name="Toggle" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 128.0
grow_horizontal = 0
icon = ExtResource("3_0852y")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -705.5
offset_top = -440.0
offset_right = 705.5
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_0852y")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="Settings" parent="PanelContainer/ScrollContainer/MarginContainer" instance=ExtResource("4_u7v05")]
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 24

[node name="Button" type="Button" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 64
text = "Okay"

[node name="Button2" type="Button" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Exit"

[connection signal="pressed" from="Toggle" to="." method="_on_toggled"]
[connection signal="pressed" from="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_exit_pressed"]
